--- a/resources/templates/index.mustache
+++ b/resources/templates/index.mustache
@@ -1,10 +1,12 @@
 <html>
     <head>
         <title>Hello World</title>
+        <link rel="stylesheet" type="text/css" href="/style.css">
     </head>
     <body>
         <div class="container">
             <h1>{{ greeting }}, World</h1>
+            <p>How do you do?</p>
         </div>
     </body>
 </html>
